# llama_protoype

./: .gitignore  ANALYSIS_REPORT.md  Makefile  README.md  benchmark_results.md  memory.jsonl  policy_catalog.md  purge_log.json  pyproject.toml  requirements.txt  results_and_analysis.md  run_cli.py  run_test.py
Prototype_documents/: MemoryArchitect_Prototype.docx
configs/: policy.yaml
data/: locomo_128k.json  locomo_test.json  long_context_full.json  smart_purge_test.json
scripts/: benchmark_128k.py  build_chroma_hf_wiki.py  build_chroma_knowledge.py  build_chroma_longmem.py  build_corpus_index.py  convert_longmemeval_to_lite.py  count_memory_tokens.py  eval_longmem_lite.py  eval_router.py  generate_128k_test.py  ingest_hf_wiki.py  ingest_longmem_internal.py  ingest_longmemeval.py  list_rag_docs.py  report.py  run_eval_custom.py  smoke.py  start_api.py  test_embed.py  test_in_corpus.py  train_router.py
src/: budget.py  config.py  governance.py  llm.py  memory.py  pipeline.py  policy.py  rag.py  rag_multi.py  reflect.py  router.py  tags.py  verify.py
src/memory_architect/: cli.py
src/memory_architect/core/: adaptive.py  budgeter.py  config.py  decay.py  llm.py  prompt_assembler.py  pruning.py  reflection.py  schema.py  summarization.py
src/utils/: logging.py  tokenizer.py
tests/: smoke_test_llm.py
tests/integration/: test_api_e2e.py  test_governance.py
tests/unit/: test_budgeter.py  test_config.py  test_logger.py  test_privacy.py  test_reflection_complete.py  test_reflection_system.py  test_schema.py  test_vector_store.py
tools/: build_wiki_index.py
(+11 files in other folders)
